Main page layout

--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -2,8 +2,4 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1 class="text-xl text-orange-600">Hello, world!</h1>
-
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+<h1 class="text-xl underline decoration-dotted text-white ">Hello, world!</h1>
