--- a/Pages/_Layout.cshtml
+++ b/Pages/_Layout.cshtml
@@ -11,20 +11,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
-<body>
+<body class="dark:bg-gray-900">
     @RenderBody()
-
-    <div id="blazor-error-ui">
-        <environment include="Staging,Production">
-            An error has occurred. This application may no longer respond until reloaded.
-        </environment>
-        <environment include="Development">
-            An unhandled exception has occurred. See browser dev tools for details.
-        </environment>
-        <a href="" class="reload">Reload</a>
-        <a class="dismiss">🗙</a>
-    </div>
-
-    <script src="_framework/blazor.server.js"></script>
 </body>
 </html>
