--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -2,18 +2,8 @@
 
 <PageTitle>UpShift</PageTitle>
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
+<NavBar/>
 
-    <main>
-        <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
-        </div>
+<Login/>
 
-        <article class="content px-4">
-            @Body
-        </article>
-    </main>
-</div>
+<Footer/>
