--- a/Pages/Footer.razor
+++ b/Pages/Footer.razor
@@ -1,3 +1,3 @@
-<footer class="fixed bottom-0 dark:bg-gray-800 w-full">
+<footer class="fixed bottom-0 dark:bg-gray-800 w-full text-center">
     <a class="text-white">UpShift</a>
 </footer>
