--- a/Pages/Login.razor
+++ b/Pages/Login.razor
@@ -4,12 +4,12 @@
           <div class="mx-auto">
             <div class="mb-5">
               <label for="username" class="block text-sm font-semibold text-gray-600">Username:</label>
-              <input type="text" id="username" name="username" class="w-full px-4 py-2 border rounded-md focus:outline-none focus:border-blue-500">
+              <input type="text" id="username" name="username" class="text-black w-full px-4 py-2 border rounded-md focus:outline-none focus:border-blue-500">
             </div>
 
             <div class="mb-5">
               <label for="password" class="block text-sm font-semibold text-gray-600">Password:</label>
-              <input type="password" id="password" name="password" class="w-full px-4 py-2 border rounded-md focus:outline-none focus:border-blue-500">
+              <input type="password" id="password" name="password" class="text-black w-full px-4 py-2 border rounded-md focus:outline-none focus:border-blue-500">
             </div>
 
             <button class="mb-5 w-full bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-600 focus:outline-none focus:border-blue-700 focus:ring focus:ring-blue-200">
