--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -1,9 +1,22 @@
-﻿@inherits LayoutComponentBase
-
-<PageTitle>UpShift</PageTitle>
+﻿@using UpShift.Authentication
+@inherits LayoutComponentBase
+@inject AuthenticationStateProvider authStateProvider
+@inject NavigationManager navManager
 
 <NavBar/>
-
-<Login/>
-
+<main>
+	<article class="content px-4">
+		@Body
+	</article>
+</main>
 <Footer/>
+
+
+@code {
+	private async Task Logout()
+	{
+		var customAuthStateProvider = (CustomAuthenticationStateProvider)authStateProvider;
+		await customAuthStateProvider.UpdateAuthenticationState(null);
+		navManager.NavigateTo("/", true);
+	}
+}
