--- a/LI4.2/Shared/MainLayout.razor
+++ b/LI4.2/Shared/MainLayout.razor
@@ -12,7 +12,6 @@
 
     <main>
         <div class="top-row px-4">
-            <NavBar/>
             <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
             <AuthorizeView>
                 <Authorized>
@@ -20,6 +19,7 @@
                 </Authorized>
                 <NotAuthorized>
                     <a href="/login">Login</a>
+                    <a href="/register">Register</a>
                 </NotAuthorized>
             </AuthorizeView>
         </div>
@@ -29,6 +29,7 @@
         </article>
     </main>
 </div>
+
 
 @code{
     private async Task Logout()
