--- a/LI4.2/Shared/MainLayout.razor
+++ b/LI4.2/Shared/MainLayout.razor
@@ -5,6 +5,8 @@
 
 <PageTitle>UpShift</PageTitle>
 
+<div class= "login-page"></div>
+
 <div class="page">
     <div class="sidebar">
         <NavMenu />
@@ -16,6 +18,7 @@
             <AuthorizeView>
                 <Authorized>
                     <a @onclick="Logout" href="javascript:void(0)">Logout</a>
+                    <a href="/faq">FAQ</a>
                 </Authorized>
                 <NotAuthorized>
                     <a href="/login">Login</a>
@@ -28,6 +31,9 @@
             @Body
         </article>
     </main>
+    <footer>
+        <img src="caminho/para/sua/imagem.jpg">
+    </footer>
 </div>
 
 
