--- a/LI4.2/Shared/MainLayout.razor.css
+++ b/LI4.2/Shared/MainLayout.razor.css
@@ -1,7 +1,12 @@
+body {
+    background-color: #0b0c10;
+}
+
 .page {
     position: relative;
     display: flex;
     flex-direction: column;
+    background-color: #0b0c10;
 }
 
 main {
@@ -9,16 +14,24 @@ main {
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    background-image: linear-gradient(180deg, #12232e 0%, #3a0647 70%);
 }
 
 .top-row {
-    background-color: #f7f7f7;
-    border-bottom: 1px solid #d6d5d5;
+    background-color: #12232e;
+    border-bottom: 2x solid #d6d5d5;
     justify-content: flex-end;
     height: 3.5rem;
     display: flex;
     align-items: center;
+}
+
+footer {
+    background-color: #12232e;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
     .top-row ::deep a, .top-row .btn-link {
