--- a/Pages/Login.razor
+++ b/Pages/Login.razor
@@ -5,18 +5,27 @@
 @inject AuthenticationStateProvider authStateProvider
 @inject NavigationManager navManager
 
+<style>
+    .username-input {
+        background-color: #12232e;
+    }
+    .password-input {
+        background-color: #12232e;
+    }
+</style>
+
 <div class="flex grid grid-cols-2 text-white h-screen items-center">
 
     <!-- Parte do Username e Pw-->
     <div class="mx-auto">
         <div class="mb-3">
             <label>User Name</label>
-            <input @bind="model.Username" class="form-control" placeholder="Username" />
+            <input @bind="model.Username" class="form-control username-input" placeholder="Username" />
         </div>
 
         <div class="mb-3">
             <label>Password</label>
-            <input @bind="model.Password" type="password" class="form-control" placeholder="Password" />
+            <input @bind="model.Password" type="password" class="form-control password-input" placeholder="Password" />
         </div>
 
         <button @onclick="Authenticate" class="mb-5 w-full bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-600 focus:outline-none focus:border-blue-700 focus:ring focus:ring-blue-200">
