Add pagina perfil, seleção de métodos de entrega e detalhes pagamento

--- a/LI4.2/Pages/DetalhesLeilao.razor
+++ b/LI4.2/Pages/DetalhesLeilao.razor
@@ -93,7 +93,7 @@ else
         }
         else
         {
-            navigationManager.NavigateTo("/");
+            navigationManager.NavigateTo("/perfil");
         }
     }
     private void ShowInputLicitar()
