--- a/LI4.2/Shared/MainLayout.razor
+++ b/LI4.2/Shared/MainLayout.razor
@@ -24,7 +24,7 @@
             </AuthorizeView>
             <AuthorizeView>
                 <Authorized>
-
+                    <a href="/perfil">Perfil</a>
                     <a @onclick="Logout" href="javascript:void(0)">Logout</a>
                 </Authorized>
                 <NotAuthorized>
