--- a/LI4.2/Pages/ListarLeiloes.razor
+++ b/LI4.2/Pages/ListarLeiloes.razor
@@ -15,7 +15,7 @@
                 <li class="list-group-item">
                     <div class="d-flex justify-content-between">
                         <div>
-                            <strong>@leilao.Titulo</strong> - @leilao.Marca @leilao.Modelo (@leilao.Ano) - @leilao.PrecoStart€ - <strong>Termina: (@leilao.FinalLeilao)</strong>
+                            <strong>@leilao.Titulo</strong> - @leilao.Marca @leilao.Modelo (@leilao.Ano) - @leilao.ValorAtual€ - <strong>Termina: (@leilao.FinalLeilao)</strong>
                         </div>
                         <div>
                             <button class="btn btn-primary" @onclick="(() => VerLeilao(leilao.Id))">Ver</button>
