--- a/LI4.2/Pages/Login.razor
+++ b/LI4.2/Pages/Login.razor
@@ -6,38 +6,46 @@
 @inject NavigationManager navManager
 
 <style>
-    .username-input, .password-input {
+    .username-input {
         background-color: #12232e;
-        border: #12232e;
-        color: #ffffff; 
     }
-    .login-button {
-        background-color: #12232e; 
-    }
-    .login-title {
-        color: #ffffff; 
+
+    .password-input {
+        background-color: #12232e;
     }
 </style>
 
-<div class="row">
-    <div class="col-lg-4 offset-lg-4 pt-4 pb-4 border">
-        <div class="mb-3 text-center">
-            <h3 class="login-title">LOGIN</h3>
-        </div>
-        <div class="mb-5 text-center">
+<div class="flex grid grid-cols-2 text-white h-screen items-center">
+
+
+    <div class="mx-auto">
+        <div class="mb-3">
             <label for="username" class="block text-sm font-semibold text-gray-600 text-center"></label>
-            <input @bind="model.UserName" class="text-black w-full px-4 py-2 border rounded-md focus:outline-none focus:border-blue-500 username-input" placeholder="Username">
+            <input @bind="model.UserName" class="text-white w-full px-4 py-2 border rounded-md focus:outline-none focus:border-blue-500 username-input" placeholder="Username">
         </div>
 
         <div class="mb-5 text-center">
             <label for="password" class="block text-sm font-semibold text-gray-600 text-center"></label>
-            <input @bind="model.Password" type="password" class="text-black w-full px-4 py-2 border rounded-md focus:outline-none focus:border-blue-500 password-input" placeholder="Password">
+            <input @bind="model.Password" type="password" class="text-white w-full px-4 py-2 border rounded-md focus:outline-none focus:border-blue-500 password-input" placeholder="Password">
         </div>
 
         <div class="mb-5 d-grid gap-2 text-center">
             <button @onclick="Authenticate" class="mb-5 w-full bg-blue-500 text-blue px-4 py-2 rounded-md hover:bg-blue-600 focus:outline-none focus:border-blue-700 focus:ring focus:ring-blue-200 login-button">
                 Log In
             </button>
+        </div>
+        <div class="mb-5">
+            <a>Don't have an account?</a>
+            <a href="/register" class="text-blue-500 underline">Register here</a>
+        </div>
+    </div>
+
+    <div class="mx-auto dark:bg-gray-800">
+        <div style="width: 30rem; height: 30rem;" class="flex items-center justify-center text-center">
+            <div style="padding-top: 150px; padding-right: 100px; padding-bottom: 150px; padding-left: 100px" class="border-2 border-blue-500 box-content">
+                <div class="text-lg font-bold">Log In</div>
+                <div>Welcome to UpShift!</div>
+            </div>
         </div>
     </div>
 </div>
