--- a/LI4.2/Shared/MainLayout.razor
+++ b/LI4.2/Shared/MainLayout.razor
@@ -9,7 +9,7 @@
             <NavBar />
         </div>
 
-        <article class="content px-4">
+        <article>
             @Body
         </article>
     </main>
