fix: change page title to en

--- a/LI4.2/Pages/ListarLeiloes.razor
+++ b/LI4.2/Pages/ListarLeiloes.razor
@@ -3,7 +3,7 @@
 @using Controllers
 @inject ILeilaoController leilaoController
 
-<PageTitle>Lista de Leilões</PageTitle>
+<PageTitle>Auctions</PageTitle>
 
 <div class="text-white">
     
